# sle-kalashnikov

./: CMakeLists.txt
examples/tridiag/example01/: data.txt  solution.txt
src/: CMakeLists.txt  CSR.cpp  CSR.hpp  CSRMatrix.cpp  CSRMatrix.hpp  DenseMatrix.cpp  DenseMatrix.hpp  HessenbergMatrix.cpp  HessenbergMatrix.hpp  HouseholderQR.cpp  HouseholderQR.hpp  TridiagMatrix.cpp  TridiagMatrix.hpp  comparison.cpp  comparison.py  main.cpp  solvers.cpp  solvers.hpp  tools.cpp  tools.hpp
tests/: CMakeLists.txt  out.txt  test_CSRDenseComparison.cpp  test_FPIAccelerated.cpp  test_GaussSeidel.cpp  test_Givens.cpp  test_Hessenberg.cpp  test_Householder.cpp  test_Jacobi.cpp  test_accelerationComparison.cpp  test_comparison.cpp  test_fixedPointIteration.cpp  test_householder.cpp  test_qrsolver.cpp  test_solvers.cpp  test_solversComparison.cpp  test_tridiag.cpp
tests/accelerationComparison/: FPI.txt  FPIA.txt  GS.txt  Jacobi.txt  comparison.py
tests/solversComparison/: AGS.txt  ConjGrad.txt  FPI.txt  FPIA.txt  GMRES.txt  GS.txt  GradDes.txt  Jacobi.txt  SGS.txt  comparison.py
tridiag/: CMakeLists.txt  main.cpp  tridiag_solver.cpp  tridiag_solver.hpp
